# sales-agent

./: .gitignore  .gitkeep  PROTOTYPE_HANDOFF.md  README.md  app.js  index.html  pyproject.toml  run_agent.ps1  run_agent_web.ps1  server.js  styles.css  test_minimax_key.ps1
bp-ba-analysis-agent/: .gitignore  PROJECT_README.md  README.md  UPLOAD_STATUS.md  pyproject.toml
bp-ba-analysis-agent/docs/: artifact-build-manifest.json  flexible_analysis_agent_design.md  ppt_content_summary.md  sales_bp_agent_0_to_1_roadmap.md  sales_bp_agent_0_to_1_wbs.csv  sales_bp_agent_mvp_4_week_wbs_cn.csv
bp-ba-analysis-agent/examples/: run_cases.py  run_real_data_demo.ps1  run_workflow_web_demo.ps1
bp-ba-analysis-agent/skills/bp-ba-sales-analysis/: SKILL.md
bp-ba-analysis-agent/src/bp_ba_agent/: __init__.py  agent.py  analysis_topics.py  cli.py  (+9 more)
bp-ba-analysis-agent/tests/: test_agent.py  test_analysis_topics.py  test_flexible_architecture.py  test_multi_agent_workflow.py  test_real_data.py  test_traffic_review.py
bp-ba-analysis-agent/v2_workbench/: .gitignore  README.md  start_v2.ps1
sales-bp-analysis-agent/: README.md
sales-bp-analysis-agent/config/: analysis-playbooks.json  semantic-layer.json
sales-bp-analysis-agent/docs/: agent-design.md  skill-routing.md
sales-bp-analysis-agent/prototype/: app.js  index.html  styles.css
sales-bp-analysis-agent/scripts/: analyze_sales_csv.py
src/ba_analysis_agent/: __init__.py  agents.py  cli.py  data_source.py  llm.py  models.py  orchestrator.py  playbook.py  skills.py  web_app.py  workflow.py
tests/: test_orchestrator.py
(+22 files in other folders)
